--- a/danusys-platform/src/main/resources/templates/view/pages/config/dimmingGroup.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/dimmingGroup.html
@@ -12,12 +12,12 @@
         <i><img src="/images/default/settingArrowNext.svg"></i>
         <span>디밍 그룹 설정</span>
     </h4>
-    <section class="settingContent">
-        <article class="search-form" id="searchForm">
+    <section class="setting_content">
+        <article class="search_form" id="searchForm">
             <h6>디밍 그룹 검색</h6>
             <form>
                 <div>
-                    <dl class="searchTextSet">
+                    <dl class="search_text_set">
                         <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
                         <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
                         <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
@@ -25,8 +25,8 @@
                 </div>
             </form>
         </article>
-        <article class="searchList">
-            <div class="articleTitle">
+        <article class="search_list">
+            <div class="article_title">
                 <dl class="title">
                     <dt>디밍 그룹 목록</dt>
                     <dd><span class="count">123</span>건</dd>
@@ -35,24 +35,24 @@
                     <li><i><img src="/images/default/add.svg"></i>디밍 그룹 생성</li>
                 </ul>
             </div>
-            <div class="searchTable">
+            <div class="search_table">
                 <table>
                     <thead>
                     <tr>
-                        <th>Index</th>
-                        <th>구역 관리 ID</th>
-                        <th>구역 이름</th>
-                        <th>주소</th>
-                        <th>데이터 수집 주기</th>
-                        <th>등주</th>
-                        <th>분전함</th>
-                        <th>스마트폴</th>
-                        <th>가로등</th>
-                        <th>보안등</th>
-                        <th>게이트웨이</th>
-                        <th>마지막 수정일시</th>
-                        <th>상세보기</th>
-                    </tr>
+                        <th>_index</th>
+<th>구역관리_i_d</th>
+<th>구역이름</th>
+<th>주소</th>
+<th>데이터수집주기</th>
+<th>등주</th>
+<th>분전함</th>
+<th>스마트폴</th>
+<th>가로등</th>
+<th>보안등</th>
+<th>게이트웨이</th>
+<th>마지막수정일시</th>
+<th>상세보기</th>
+</tr>
                     </thead>
                     <tbody>
                     <tr>
@@ -238,8 +238,8 @@
                     </tbody>
                 </table>
             </div>
-            <div class="tableBottom">
-                <ul class="pageNav">
+            <div class="table_bottom">
+                <ul class="page_nav">
                     <li class="prev"><i><img src="/images/default/prev.svg"></i></li>
                     <li class="on">1</li>
                     <li>2</li>
