--- a/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
@@ -11,19 +11,19 @@
             <i><img src="/images/default/settingArrowNext.svg"></i>
             <span>공지사항</span>
         </h4>
-        <section class="settingContent">
-            <article class="search-form" id="searchForm">
+        <section class="setting_content">
+            <article class="search_form" id="searchForm">
                 <h6>공지사항 검색</h6>
                 <form>
                     <div>
-                        <dl class="dateSet">
+                        <dl class="date_set">
                             <dt>발생 기간</dt>
                             <dd><input type="text" name="startDt" id="startDt" placeholder="날짜를 입력하세요" class="input_date"></dd>
                             <span>부터</span>
                             <dd><input type="text" name="endDt" id="endDt" placeholder="날짜를 입력하세요" class="input_date"></dd>
                             <span>까지</span>
                         </dl>
-                        <dl class="searchTextSet">
+                        <dl class="search_text_set">
                             <dd><input type="text" name="keyword" placeholder="검색어를 입력하세요."></dd>
                              <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
                             <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
@@ -31,8 +31,8 @@
                     </div>
                 </form>
             </article>
-            <article class="searchList">
-                <div class="articleTitle">
+            <article class="search_list">
+                <div class="article_title">
                     <dl class="title">
                         <dt>공지사항 목록</dt>
                         <dd><span class="count">0</span>건</dd>
@@ -41,7 +41,7 @@
                         <li><i><img src="/images/default/add.svg"></i>작성하기</li>
                     </ul>
                 </div>
-                <div class="searchTable">
+                <div class="search_table">
                     <table id="noticeTable">
                         <thead>
                         <tr>
