--- a/danusys-platform/src/main/resources/templates/fragments/config/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/config/nav.html
@@ -1,17 +1,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="navFragment">
-    <aside class="accordionMenu accordion">
+    <aside class="accordion_menu accordion">
         <ul class="accordion">
             <li id="one" class="multi">
                 <a href="#one">스마트 가로등</a>
-                <ul class="sub-menu">
+                <ul class="accordion_sub_menu">
                     <li id="dimmingGroup"><a href="/pages/config/dimmingGroup">디밍 그룹 설정</a></li>
                     <li id="dimmingSet"><a href="/pages/config/dimmingSet">디밍 설정</a></li>
                 </ul>
             </li>
             <li id="two" class="multi">
                 <a href="#two">사용자</a>
-                <ul class="sub-menu">
+                <ul class="accordion_sub_menu">
                     <li id="userAccount"><a href="/pages/config/userAccount">사용자 계정 관리</a></li>
                     <li id="userGroup"><a href="/pages/config/userGroup">사용자 그룹 관리</a></li>
                 </ul>
