--- a/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/inqry/nav.html
@@ -1,10 +1,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="navFragment">
-    <aside class="accordionMenu accordion">
+    <aside class="accordion_menu accordion">
         <ul class="accordion">
             <li id="one" class="multi">
                 <a href="#one">이벤트 관리<span>20</span></a>
-                <ul class="sub-menu">
+                <ul class="accordion_sub_menu">
                     <li id="event1"><a href="/pages/inqry/event1">스마트 도시 이벤트<span>12</span></a></li>
                     <li id="event2"><a href="/pages/inqry/event2">시설물 장애 이벤트<span>8</span></a></li>
                 </ul>
