--- a/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <th:block th:insert="/fragments/default/head"/>
+    <th:block th:insert="/fragments/default/default"/>
     <link rel="stylesheet" type="text/css" href="/css/monitoring.css">
     <script type="text/javascript" src="/js/map/controlMap.js"></script>
     <script type="text/javascript" src="/js/pages/mntr.js"></script>
