--- a/danusys-platform/src/main/resources/templates/view/pages/config/dimmingSet.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/dimmingSet.html
@@ -13,85 +13,94 @@
             <i><img src="/images/default/settingArrowNext.svg"></i>
             <span>디밍 설정</span>
         </h4>
-        <section class="settingContent">
-            <article class="search-form" id="searchForm">
-                <h6>디밍 검색</h6>
-                <form>
-                    <div>
-                        <dl class="searchTextSet">
-                            <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
-                             <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
-                            <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
-                        </dl>
-                    </div>
-                </form>
-            </article>
-            <article class="searchList">
-                <div class="articleTitle">
-                    <dl class="title">
-                        <dt>디밍 목록</dt>
-                        <dd><span class="count">123</span>건</dd>
-                    </dl>
+        <section class="setting_content">
+            <div class="dimming_contents">
+                <div class="dimming_column">
+                    <article class="search_form">
+                        <h6>디밍 검색</h6>
+                        <form>
+                            <div>
+                                <dl class="search_text_set">
+                                    <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
+                                    <dd class="button"><i><img src="/images/default/refresh.svg"></i>검색조건 초기화</dd>
+                                    <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
+                                </dl>
+                            </div>
+                        </form>
+                    </article>
+                    <article class="search_list">
+                        <div class="article_title">
+                            <dl class="title">
+                                <dt>디밍 목록</dt>
+                                <dd><span class="count">123</span>건</dd>
+                            </dl>
+                            <ul>
+                                <li><i><img src="/images/default/add.svg"></i>디밍 추가</li>
+                            </ul>
+                        </div>
+                        <div class="search_table">
+                            <table>
+                                <thead>
+                                <tr>
+                                    <th>Index</th>
+                                    <th>디밍 관리 ID</th>
+                                    <th>구역 이름</th>
+                                    <th>설명</th>
+                                    <th>스마트폴</th>
+                                    <th>마지막 수정일시</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td>AREA0000</td>
+                                    <td>다누대로</td>
+                                    <td>다누대로입니다.</td>
+                                    <td>000</td>
+                                    <td>2021.11.20</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>AREA0000</td>
+                                    <td>다누대로</td>
+                                    <td>다누대로입니다.</td>
+                                    <td>000</td>
+                                    <td>2021.11.20</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="table_bottom">
+                            <ul class="page_nav">
+                                <li class="prev"><i><img src="/images/default/navPrev.svg"></i></li>
+                                <li class="on">1</li>
+                                <li>2</li>
+                                <li>3</li>
+                                <li>4</li>
+                                <li>5</li>
+                                <li class="next"><i><img src="/images/default/navNext.svg"></i></li>
+                            </ul>
+                            <p class="button"><i><img src="/images/default/excel.svg"></i>엑셀로 내보내기</p>
+                        </div>
+                    </article>
                 </div>
-                <div class="searchTable">
-                    <table>
-                        <thead>
-                        <tr>
-                            <th>Index</th>
-                            <th>디밍 관리 ID</th>
-                            <th>구역 이름</th>
-                            <th>설명</th>
-                            <th>스마트폴</th>
-                            <th>마지막 수정일시</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>AREA0000</td>
-                            <td>다누대로</td>
-                            <td>다누대로입니다.</td>
-                            <td>000</td>
-                            <td>2021.11.20</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>AREA0000</td>
-                            <td>다누대로</td>
-                            <td>다누대로입니다.</td>
-                            <td>000</td>
-                            <td>2021.11.20</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="tableBottom">
-                    <ul class="pageNav">
-                        <li class="prev"><i><img src="/images/default/prev.svg"></i></li>
-                        <li class="on">1</li>
-                        <li>2</li>
-                        <li>3</li>
-                        <li>4</li>
-                        <li>5</li>
-                        <li class="next"><i><img src="/images/default/next.svg"></i></li>
-                    </ul>
-                    <p class="button"><i><img src="/images/default/excel.svg"></i>엑셀로 내보내기</p>
-                </div>
-            </article>
-            <article class="map"></article>
-            <article class="searchList dimmingSet">
-                <div class="articleTitle">
+                <!-- 지도 영역 -->
+                <div class="map"></div>
+                <!-- //지도 영역 -->
+            </div>
+            <article class="search_list dimming_set">
+                <div class="article_title">
                     <dl class="title">
                         <dt>디밍 설정</dt>
                     </dl>
                     <div>
                         <ul>
-                            <li><i><img src="/images/default/return.svg"></i>기본값으로 되돌리기</li>
+                            <li><i><img src="/images/default/refresh.svg"></i>기본값으로 되돌리기</li>
                             <li><i><img src="/images/default/apply.svg"></i>적용</li>
                         </ul>
                     </div>
                 </div>
-                <div class="settingDimming">
+                <div class="setting_dimming">
                     <ul>
                         <li>
                             <span>최대 밝기 도달 시간</span>
@@ -106,7 +115,7 @@
                             <input type="text" placeholder="00">초
                         </li>
                     </ul>
-                    <div class="dimmingByTime">
+                    <div class="dimming_by_time">
                         <p>시간대별 최대/최소 밝기</p>
                         <table>
                             <thead>
