--- a/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
@@ -13,15 +13,15 @@
             <i><img src="/images/default/settingArrowNext.svg"></i>
             <span>사용자 계정 관리</span>
         </h4>
-        <section class="settingContent">
-            <article class="search-form" id="searchForm">
+        <section class="setting_content">
+            <article class="search_form" id="searchForm">
                 <h6>사용자 계정 검색</h6>
                 <form>
                     <div>
-                        <dl class="searchTextSet">
+                        <dl class="search_text_set">
                             <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
-                        </dl>
-                        <dl class="checkboxSet">
+                        </Dl>
+                        <dl class="checkbox_set">
                             <dt>계정 상태</dt>
                             <dd>
                                 <span>
@@ -34,15 +34,15 @@
                                 </span>
                             </dd>
                         </dl>
-                        <dl class="searchTextSet">
+                        <dl class="search_text_set">
                              <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
                             <dd class="button"><i><img src="/images/default/search.svg"></i>검색</dd>
                         </dl>
                     </div>
                 </form>
             </article>
-            <article class="searchList">
-                <div class="articleTitle">
+            <article class="search_list">
+                <div class="article_title">
                     <dl class="title">
                         <dt>사용자 계정 목록</dt>
                         <dd><span class="count">123</span>건</dd>
@@ -51,7 +51,7 @@
                         <li><i><img src="/images/default/add.svg"></i>사용자 계정 추가</li>
                     </ul>
                 </div>
-                <div class="searchTable">
+                <div class="search_table">
                     <table id="userAccountTable">
                         <thead>
                         <tr>
@@ -81,8 +81,8 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="tableBottom">
-                    <ul class="pageNav">
+                <div class="table_bottom">
+                    <ul class="page_nav">
                         <li class="prev"><i><img src="/images/default/prev.svg"></i></li>
                         <li class="on">1</li>
                         <li>2</li>
