--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
@@ -291,7 +291,7 @@
                 </table>
             </div>
             <div class="table_bottom">
-                <ul class="pageNav">
+                <ul class="page_nav">
                     <li class="prev"><i><img src="/images/default/prev.svg"></i></li>
                     <li class="on">1</li>
                     <li>2</li>
