관제 카멜 -> 스네이크

--- a/danusys-platform/src/main/resources/templates/fragments/default/header.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/header.html
@@ -10,7 +10,7 @@
             <li id="stats"><a href="/pages/stats">통계</a></li>
             <li id="config"><a href="/pages/config/dimmingGroup">환경설정</a></li>
         </ul>
-        <ul class="utmenu">
+        <ul class="util_menu">
             <li><i><img src="/images/default/utmenu01.svg"></i>알림</li>
             <li><i><img src="/images/default/utmenu02.svg"></i>admin 님</li>
         </ul>
