--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -2,9 +2,9 @@
 <th:block th:fragment="navRFragment">
 
     <!-- RNM -->
-    <section class="areaInfo smartPower">
+    <section class="area_info smart_power">
         <h6>[Tab 1 관리번호] [Tab 1 형태] Tab 1 이름
-            <i class="rnmCloser">
+            <i class="rnm_closer">
                 <img src="/images/default/close.svg">
             </i>
         </h6>
@@ -13,36 +13,36 @@
             <li><a>시설물 제어</a></li>
             <li><a>제어 로그</a></li>
         </ul>
-        <div class="infoTabSection">
-            <dl class="areaTitle">
+        <div class="info_tab_section">
+            <dl class="area_title">
                 <dt><i><img src="/images/default/titleIcon03.svg"></i>CCTV
                     <select>
                         <option>번호 올림차순</option>
                         <option>번호 내림차순</option>
                     </select>
                 </dt>
-                <dd class="ptzToggle">
+                <dd class="ptz_toggle">
                     <span>PTZ</span>
                     <input type="checkbox" id="switch"><label for="switch">Toggle</label>
                 </dd>
             </dl>
-            <div class="areaVideo">
+            <div class="area_video">
                 <div><!-- 영상 --></div>
             </div>
-            <dl class="areaTitle">
+            <dl class="area_title">
                 <dt><i><img src="/images/default/titleIcon04.svg"></i>개소 정보</dt>
             </dl>
-            <div class="areaContents">
+            <div class="area_contents">
                 <ul>
                     <li>[관리번호] 이름</li>
                     <li>종류</li>
                     <li class="gray">행정동/도로명 주소 or 지번 주소</li>
                 </ul>
             </div>
-            <dl class="areaTitle">
+            <dl class="area_title">
                 <dt><i><img src="/images/default/titleIcon04.svg"></i>장비 상태</dt>
             </dl>
-            <div class="areaContents">
+            <div class="area_contents">
                 <div>
                     <dl>
                         <dt><i class="circle green"></i>장비 연결 끊김</dt>
@@ -58,10 +58,10 @@
                     </dl>
                 </div>
             </div>
-            <dl class="areaTitle">
+            <dl class="area_title">
                 <dt><i><img src="/images/default/titleIcon05.svg"></i>정류장 현황</dt>
             </dl>
-            <div class="areaBusStationState">
+            <div class="area_bus_station_state">
                 <dl>
                     <dt><i><img src="/images/default/busStationState01.svg"></i>현재 인원</dt>
                     <dd>8<span>명</span></dd>
