--- a/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_mntr.html
@@ -11,7 +11,7 @@
     <div class="wrap">
         <th:block th:replace="fragments/default/header :: headerFragment" />
 
-            <div class="mntrContainer">
+            <div class="mntr_container">
                 <th:block layout:fragment="menu" />
                 <th:block th:replace="fragments/mntr/navL :: navLFragment" />
                 <th:block layout:fragment="content" />
