--- a/danusys-platform/src/main/resources/static/css/board.css
+++ b/danusys-platform/src/main/resources/static/css/board.css
@@ -4,11 +4,11 @@
 .wrap{width: 100%; height: 100%;}
 
 /* lnb tabButton */
-.lnb .tabButton{display: flex; align-items: center; justify-content: space-between; width: 100%; height: 40px; padding: 0px 14px; box-sizing: border-box; background: #23252b;}
-.lnb .tabButton li{height: 100%; padding: 0px 8px; line-height: 36px; color: #7f8491; font-size: 16px; cursor: pointer; box-sizing: border-box;}
-.lnb .tabButton li:hover{color: #dee0e4;}
-.lnb .tabButton li:active{color: #dee0e4; font-weight: bold; border-bottom: 4px solid #3a66e5;}
-.lnb .tabButton li.on{color: #dee0e4; font-weight: bold; border-bottom: 4px solid #3a66e5;}
+.lnb .tab_button{display: flex; align-items: center; justify-content: space-between; width: 100%; height: 40px; padding: 0px 14px; box-sizing: border-box; background: #23252b;}
+.lnb .tab_button li{height: 100%; padding: 0px 8px; line-height: 36px; color: #7f8491; font-size: 16px; cursor: pointer; box-sizing: border-box;}
+.lnb .tab_button li:hover{color: #dee0e4;}
+.lnb .tab_button li:active{color: #dee0e4; font-weight: bold; border-bottom: 4px solid #3a66e5;}
+.lnb .tab_button li.on{color: #dee0e4; font-weight: bold; border-bottom: 4px solid #3a66e5;}
 .lnb .search_list{flex: 1; overflow: auto; display: flex; flex-direction: column; background: transparent;}
 
 .button{height: 30px; font-size: 14px; padding: 6px; box-sizing: border-box; background: #292c34; border-radius: 4px; cursor: pointer;}
