--- a/danusys-platform/src/main/resources/static/css/reset.css
+++ b/danusys-platform/src/main/resources/static/css/reset.css
@@ -96,6 +96,6 @@ header .gnm li{height: 60px; line-height: 58px; box-sizing: border-box;}
 header .gnm li a{display: block; padding: 0px 14px; font-size: 18px; cursor: pointer;}
 header .gnm li:hover{box-sizing: border-box; border-bottom: 4px solid #3a66e5;}
 header .gnm li:active{}
-header .utmenu{display: flex; align-items: center; justify-content: flex-start; grid-gap: 40px; margin: 0px 20px;}
-header .utmenu li{display: flex; align-items: center; grid-gap: 8px; cursor: pointer;}
-header .utmenu li i{width: 20px; height: 20px;}
+header .util_menu{display: flex; align-items: center; justify-content: flex-start; grid-gap: 40px; margin: 0px 20px;}
+header .util_menu li{display: flex; align-items: center; grid-gap: 8px; cursor: pointer;}
+header .util_menu li i{width: 20px; height: 20px;}
