--- a/danusys-drone/src/main/resources/templates/layout/base_layout.html
+++ b/danusys-drone/src/main/resources/templates/layout/base_layout.html
@@ -18,7 +18,9 @@
 
     <!-- common javascript files-->
     <script src="/webjars/jquery/3.6.0/dist/jquery.min.js"></script>
+    <script src="/webjars/axios/0.21.1/dist/axios.js"></script>
     <script src="/js/default/default.js" defer></script>
+    <script src="/js/common/common.js" defer></script>
 </head>
 
 <body>
