로드뷰 추가중

--- a/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
+++ b/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
@@ -50,6 +50,7 @@
 
         <!-- local -->
         <script type="text/javascript" src="/js/import/ol-ext.js"></script>
+        <script type="text/javascript" src="/js/import/ol-contextmenu.js"></script>
 
         <script type="text/javascript" src="/js/map/creater/mapCreater.js"></script>
         <script type="text/javascript" src="/js/map/creater/layerControlCreater.js"></script>
