다중 셀렉트 박스 에러 수정.

--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
@@ -16,12 +16,12 @@
                     <dl class="selectbox_set">
                         <dt>시설물 종류</dt>
                         <dd>
-                            <div class="dropdown_checkbox">
-                                <p class="checkbox_title checkbox_title_facilities select">시설물 종류 선택</p>
+                            <div class="dropdown_checkbox" data-selectbox-type="facilitiesSel">
+                                <p class="checkbox_title checkbox_title_facilities select" data-placeholder="시설물 종류 선택">시설물 종류 선택</p>
                                 <ul class="checkbox_list checkbox_list_facilities list">
                                     <li>
                                                 <span>
-                                                    <input type="checkbox" id="facilitiesAll" name="">
+                                                    <input type="checkbox" id="facilitiesALL" name="checkAll">
                                                     <label for="facilitiesAll"><span></span>전체</label>
                                                 </span>
                                     </li>
@@ -110,12 +110,12 @@
                     <dl class="selectbox_set">
                         <dt>행정구역</dt>
                         <dd>
-                            <div class="dropdown_checkbox">
-                                <p class="checkbox_title checkbox_title_district select">행정구역 선택</p>
+                            <div class="dropdown_checkbox" data-selectbox-type="districtSel">
+                                <p class="checkbox_title checkbox_title_district select" data-placeholder="행정구역 선택">행정구역 선택</p>
                                 <ul class="checkbox_list checkbox_list_district list">
                                     <li>
                                                 <span>
-                                                    <input type="checkbox" id="districtALL" name="">
+                                                    <input type="checkbox" id="districtALL" name="checkAll">
                                                     <label for="districtALL"><span></span>전체</label>
                                                 </span>
                                     </li>
