--- a/danusys-platform/src/main/resources/templates/view/login/roletest.html
+++ b/danusys-platform/src/main/resources/templates/view/login/roletest.html
@@ -28,7 +28,7 @@
         <dl>
             <dd sec:authorize="hasRole('MANAGER')" th:size="16">매니저  </dd>
             <dd sec:authorize="hasRole('ADMIN')" th:size="16">어드민  </dd>
-            <dd sec:authentication="principal.id">  </dd>
+            <dd sec:authentication="principal.UserSeq">  </dd>
             <dd>
                 <span>ID</span>
                 <span><input type="text" id="id" name="username" placeholder="아이디를 입력하세요." tabindex="1"></span>
