소스 정리, 시설물 CRUD 추가, 사용자 관련 JS 병합

--- a/danusys-platform/src/main/resources/static/css/board.css
+++ b/danusys-platform/src/main/resources/static/css/board.css
@@ -122,7 +122,7 @@
 .search_table table tbody tr:hover{background: #23252b;}
 .search_table table tbody tr:hover td span.button{background: #434751;}
 .search_table table tbody tr td{vertical-align: middle; text-align: center; font-size: 14px; color: #dee0e4;}
-.search_table table tbody tr td i{margin: 0px auto; cursor: pointer;}
+.search_table table tbody tr td i{margin: 0px auto; cursor: auto;}
 .search_table table tbody tr td i img{max-width: 20px; max-height: 20px; margin: auto;}
 .search_table table tbody tr td i:hover{filter: brightness(1.75);}
 .search_table table tbody tr td span.button{display: inline-block; padding: 6px 14px; color: #7f8491;}
@@ -133,22 +133,23 @@
 .search_table table tbody tr td span.status.green{background: #357d33;}
 .search_table table tbody tr td span.station_type{display: block; width: 36px; height: 36px; margin: auto;}
 .search_table table tbody tr td span.station_type img{width: 100%; height: 100%;}
-.table_bottom{display: flex; align-items: center; justify-content: center; height: 40px; margin: 14px 0px 0px;}
-.table_bottom .page_nav{flex: 1;  display: flex; align-items: center; justify-content: center; grid-gap: 10px;}
-.table_bottom .page_nav li{display: flex; align-items: center; justify-content: center; width: 34px; height: 34px; line-height: 32px; text-align: center; font-size: 14px; color: #7f8491; border-radius: 100%; background: #292c34; cursor: pointer;}
-.table_bottom .page_nav li:hover{color: #dee0e4;}
-.table_bottom .page_nav li.on{color: #dee0e4; font-weight: bold; background: #3a66e5;}
-.table_bottom .page_nav li:active{color: #dee0e4; font-weight: bold; background: #3a66e5;}
-.table_bottom .page_nav li.prev,
-.table_bottom .page_nav li.next{background: none;}
-.table_bottom .page_nav li.prev i,
-.table_bottom .page_nav li.next i{max-width: 20px; max-height: 20px; margin: 0px auto;}
-.table_bottom .page_nav li.prev i img,
-.table_bottom .page_nav li.next i img{display: block; width: 20px; height: 20px; margin: 0px auto;}
-.table_bottom .page_nav li.prev:hover,
-.table_bottom .page_nav li.next:hover{filter: brightness(1.75);}
-.table_bottom .button{float: right; display: flex; align-items: center; grid-gap: 6px; height: 34px; line-height: 32px; padding: 0px 14px; color: #7f8491;}
-.table_bottom .button:hover{color: #dee0e4;}
+.search_table .table_body{height: 100%;}
+.search_table .table_bottom{display: flex; align-items: center; justify-content: center; height: 40px; margin: 14px 0px 14px 0px;}
+.search_table .table_bottom .page_nav{flex: 1;  display: flex; align-items: center; justify-content: center; grid-gap: 10px;}
+.search_table .table_bottom .page_nav li{display: flex; align-items: center; justify-content: center; width: 34px; height: 34px; line-height: 32px; text-align: center; font-size: 14px; color: #7f8491; border-radius: 100%; background: #292c34; cursor: pointer;}
+.search_table .table_bottom .page_nav li:hover{color: #dee0e4;}
+.search_table .table_bottom .page_nav li.on{color: #dee0e4; font-weight: bold; background: #3a66e5;}
+.search_table .table_bottom .page_nav li:active{color: #dee0e4; font-weight: bold; background: #3a66e5;}
+.search_table .table_bottom .page_nav li.prev,
+.search_table .table_bottom .page_nav li.next{background: none;}
+.search_table .table_bottom .page_nav li.prev i,
+.search_table .table_bottom .page_nav li.next i{max-width: 20px; max-height: 20px; margin: 0px auto;}
+.search_table .table_bottom .page_nav li.prev i img,
+.search_table .table_bottom .page_nav li.next i img{display: block; width: 20px; height: 20px; margin: 0px auto;}
+.search_table .table_bottom .page_nav li.prev:hover,
+.search_table .table_bottom .page_nav li.next:hover{filter: brightness(1.75);}
+.search_table .table_bottom .button{float: right; display: flex; align-items: center; grid-gap: 6px; height: 34px; line-height: 32px; padding: 0px 14px; color: #7f8491;}
+.search_table .table_bottom .button:hover{color: #dee0e4;}
 
 /* inquiry */
 .inquiry{display: flex; height: calc(100% - 60px);}
