--- a/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
+++ b/danusys-commons-ui/src/main/resources/templates/view/commons/map.html
@@ -46,7 +46,7 @@
         <!--<script type="text/javascript" src="/webjars/moment/2.29.1/moment.js"></script>-->
 
         <!-- kakao api -->
-        <script type="text/javascript" src="//dapi.kakao.com/v2/maps-tunneling/sdk.js?appkey=8a0ebda8876bb68f663ceb77b22a5a51&libraries=services,clusterer"></script>
+        <!--<script type="text/javascript" src="//dapi.kakao.com/v2/maps-tunneling/sdk.js?appkey=8a0ebda8876bb68f663ceb77b22a5a51&libraries=services,clusterer"></script>-->
 
         <!-- local -->
         <script type="text/javascript" src="/js/import/ol-ext.js"></script>
